--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -1,9 +1,88 @@
 @chasert "utf-8";
 
-html{
+html {
     height: 100%;
 }
-body{
+
+body {
     height: 100%;
-    background: #3C4767;
+    max-width: 1024px;
+    background: linear-gradient(to bottom, #3C4767 70%, #ff502e);
+    background-repeat: no-repeat;
+}
+
+.title {
+    text-align: center;
+    margin-top: 40px;
+    padding: 60px;
+}
+
+.sub-title {
+    color: #fff;
+    font-size: 20px;
+}
+
+#container {
+    max-width: 300px;
+    margin: 0 auto;
+    background-color: #141414;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+
+.welcome-copy {
+    color: #fff;
+    padding-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.login-form {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.login-block {
+    margin-bottom: 20px;
+}
+
+.login-text {
+    display: block;
+    color: #fff;
+    padding-bottom: 6px;
+}
+
+.login-mail,
+.login-password {
+    display: block;
+    width: 100%;
+    height: 22px;
+    border-radius: 5px;
+}
+
+.login-button {
+    display: block;
+    border: 0;
+    background-color: #32529b;
+    padding: 5px 18px;
+    border-radius: 8px;
+    margin: 30px 0 0 auto;
+    font-size: 16px;
+    color: #fff;
+    transition: 0.6s;
+}
+
+.login-button:hover {
+    background-color: #fff;
+    color: #32529b;
+    transition: 0.6s;
+}
+
+.register-copy {
+    display: block;
+    text-align: center;
+    font-size: 14px;
+    color: #fff;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
