--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -13,8 +13,7 @@ body {
 
 .title {
     text-align: center;
-    margin-top: 40px;
-    padding: 60px;
+    padding: 20px 0 60px 0;
 }
 
 .sub-title {
@@ -23,6 +22,12 @@ body {
 }
 
 #container {
+    max-width: 1024px;
+    height: auto;
+}
+
+.login,
+.register {
     max-width: 300px;
     margin: 0 auto;
     background-color: #141414;
@@ -30,37 +35,40 @@ body {
     border-radius: 5px;
 }
 
-.welcome-copy {
+.form {
+    width: 70%;
+    margin: 0 auto;
+}
+
+h2 {
     color: #fff;
     padding-top: 40px;
     margin-bottom: 40px;
     text-align: center;
 }
 
-.login-form {
-    width: 70%;
-    margin: 0 auto;
-}
-
-.login-block {
+.login-block,
+.register-block {
     margin-bottom: 20px;
 }
 
-.login-text {
+.login-text,
+.register-text {
     display: block;
     color: #fff;
     padding-bottom: 6px;
 }
 
-.login-mail,
-.login-password {
+.login-form,
+.register-form {
     display: block;
     width: 100%;
     height: 22px;
     border-radius: 5px;
 }
 
-.login-button {
+.login-button,
+.register-button {
     display: block;
     border: 0;
     background-color: #32529b;
@@ -78,11 +86,16 @@ body {
     transition: 0.6s;
 }
 
-.register-copy {
+.r-c,
+.t-l-c {
+    padding-bottom: 40px;
+}
+
+.register-copy,
+.to-login-copy {
     display: block;
     text-align: center;
     font-size: 14px;
     color: #fff;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    margin-top: 40px;
 }
