--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,10 @@ header {
     border-left: 1px solid #6C6C6C;
 }
 
+#confirm {
+    border-bottom: 1px solid #969494;
+}
+
 .title {
     text-align: center;
 }
@@ -68,11 +72,14 @@ header {
 .list-button {
     display: inline-block;
     border: 0;
-    padding: 10px 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 130px;
     background-color: #3C4767;
     border-radius: 5px;
     font-size: 14px;
     color: #fff;
+    text-align: center;
     transition: 0.6s;
 }
 
@@ -80,4 +87,9 @@ header {
     background-color: #fff;
     color: #3C4767;
     transition: 0.6s;
+}
+
+.search {
+    justify-content: center;
+    margin-top: 30px;
 }
