--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,7 +157,8 @@ header {
     transition: 0.6s;
 }
 
-.search {
+.search,
+.like {
     justify-content: center;
     margin-top: 30px;
 }
@@ -216,6 +217,21 @@ header {
     margin-left: 75px;
     margin-bottom: 10px;
     display: block;
+}
+
+.like-block {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+}
+
+.like-button {
+    border: none;
+    background: none;
+}
+
+.like-button:hover {
+    cursor: pointer;
 }
 
 .btn-block {
